--- a/Práctica 4/Práctica 4/Práctica 4.csproj
+++ b/Práctica 4/Práctica 4/Práctica 4.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="R3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Promedio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
