--- a/Practica9/Practica9/Practica9.csproj
+++ b/Practica9/Practica9/Practica9.csproj
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\NORMAN~1\AppData\Local\Temp\vs3A2F.tmp\Debug\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\eduar\AppData\Local\Temp\vs4DF9.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,7 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\NORMAN~1\AppData\Local\Temp\vs3A2F.tmp\Release\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\eduar\AppData\Local\Temp\vs4DF9.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
