--- a/Práctica11_G1/PracticaBC/Practica11/Practica11.csproj
+++ b/Práctica11_G1/PracticaBC/Practica11/Practica11.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BibliotecaPractica">
-      <HintPath>..\..\BibliotecaPractica\BibliotecaPractica\bin\Debug\BibliotecaPractica.dll</HintPath>
+      <HintPath>..\..\BibliotecaPractica.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
